# mcp-server-qdrant

./: .dockerignore  Containerfile  Dockerfile  Dockerfile.test  KNOWN_ISSUES.md  Makefile  README.md  SUMMARY.md  TASKS.md  USAGE-dev.md  USAGE.md  VERSION  docker-compose.test.yml  docker-compose.yml  podman-compose.test.yml  podman-compose.yml  pyproject.toml  requirements.txt  test_mcp_server.py
.github/workflows/: container-build.yml  test.yml
config/: analysis.yml
data/qdrant/: raft_state.json
docker/test-tracker/: Dockerfile  requirements.txt
docs/: __init__.py
docs/adr/: 0005-mcp-server-platform-support.md  0006-automated-documentation-analysis.md  0007-automated-e2e-testing.md  0008-task-management-and-ai-recommendations.md
docs/adrs/: 0004-python-dependency-management.md  001-project-structure-and-testing.md  002-codebase-analysis-and-vector-storage.md  002-containerization-strategy.md  002-docker-compose-test-configuration.md  002-docker-deployment.md  003-container-image-publishing.md
docs/config/: analyzer_config.yaml
docs/guides/: docker-setup.md  rhel-podman-setup.md  windows-setup.md
docs/scripts/: __init__.py  analyze_codebase.py
scripts/: debug_container.sh  e2e_test.sh  manage_deps.sh  run_e2e_tests.sh  test_analysis.sh
src/mcp_server_qdrant/: main.py  metrics.py  qdrant.py  server.py  settings.py  sse.py
tests/: conftest.py  test_documentation_analyzer.py  test_settings.py  test_task_manager.py
tests/integration/: test_docker_image.py  test_docker_image_internal.py  test_qdrant_integration.py
tests/unit/: test_settings.py
(+17 files in other folders)
