[project]
name = "mcp-server-qdrant"
version = "0.7.1"
description = "Model Context Protocol server for Qdrant vector database"
authors = [
    {name = "Tosina Akinosho", email = "tosina@example.com"},
]
dependencies = [
    "mcp>=1.3.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.37.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
mcp-server-qdrant = "mcp_server_qdrant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_qdrant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.uv.dependencies]
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.5"
pytest-mock = ">=3.12.0"
